feat: add debounce while using search

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-#DATABASE_URL=postgresql://postgres:password@localhost/solaceassignment
+DATABASE_URL=postgresql://postgres:password@localhost/solaceassignment
+DEFAULT_PAGE=1
+DEFAULT_PAGE_SIZE=10
